# eleg

./: CMakeLists.txt  En_1.txt  MVM.cpp  MVM.h  Test.cpp  clients.cpp  clients.h  console_forras.txt  contracts.cpp  contracts.h  date.cpp  date.h  myvektor.hpp  save_0.txt  save_1.txt
